--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,3 +1,4 @@
+platform :ios, '9.3'
 use_frameworks!
 
 target 'SwiftyKlotski_Example' do
@@ -6,7 +7,7 @@ target 'SwiftyKlotski_Example' do
   target 'SwiftyKlotski_Tests' do
     inherit! :search_paths
 
-    pod 'Quick', '~> 1.2.0'
-    pod 'Nimble', '~> 7.0.2'
+    pod 'Quick', '~> 1.3.4'
+    pod 'Nimble', '~> 7.3.4'
   end
 end
