--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ podfile: Example/Podfile
 #  - gem install cocoapods # Since Travis is not always on latest version
 #  - pod install --project-directory=Example
 script:
-  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyKlotski.xcworkspace -scheme SwiftyKlotski-Example -sdk iphonesimulator10.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyKlotski.xcworkspace -scheme SwiftyKlotski-Example -destination 'platform=iOS Simulator,name=iPhone 7' ONLY_ACTIVE_ARCH=NO | xcpretty
   - pod lib lint
 after_success:
   - bash <(curl -s https://codecov.io/bash)
