--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@
 
 osx_image: xcode10.1
 language: objective-c
+# xcode_sdk: iphonesimulator9.3
 # cache: cocoapods
 podfile: Example/Podfile
-# before_install:
-#  - gem install cocoapods # Since Travis is not always on latest version
-#  - pod install --project-directory=Example
+before_install:
+  - gem install cocoapods # Since Travis is not always on latest version
+  - pod repo update
+  - pod install --project-directory=Example
 script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyKlotski.xcworkspace -scheme SwiftyKlotski -destination 'platform=iOS Simulator,name=iPhone 7' ONLY_ACTIVE_ARCH=NO | xcpretty
   - pod lib lint
