--- a/Example/SwiftyKlotski.xcodeproj/xcshareddata/xcschemes/SwiftyKlotski-Example.xcscheme
+++ b/Example/SwiftyKlotski.xcodeproj/xcshareddata/xcschemes/SwiftyKlotski-Example.xcscheme
@@ -42,6 +42,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "607FACE41AFB9204008FA782"
+               BuildableName = "SwiftyKlotski_Tests.xctest"
+               BlueprintName = "SwiftyKlotski_Tests"
+               ReferencedContainer = "container:SwiftyKlotski.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
