--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - gem install cocoapods # Since Travis is not always on latest version
   - pod install --project-directory=Example
 script:
-  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyKlotski.xcworkspace -scheme SwiftyKlotski-Example -sdk iphonesimulator12.0 -destination 'platform=iOS Simulator,name=iPhone X,OS=12.0' ONLY_ACTIVE_ARCH=NO | xcpretty
+  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SwiftyKlotski.xcworkspace -scheme SwiftyKlotski-Example -destination 'platform=iOS Simulator,name=iPhone X' ONLY_ACTIVE_ARCH=NO | xcpretty
   - pod lib lint
 after_success:
   - bash <(curl -s https://codecov.io/bash)
